TestCases/ASTTests/SemanticErrorsTests/CreateTests/read_file_before.dot
digraph AST {
  "125904123935616" [label="Start"];
  "125904123935616" -> "125904123934848";
  "125904123934848" [label="Code"];
  "125904123934848" -> "125904123934656";
  "125904123934656" [label="Function"];
  "125904123934656" -> "125904123928944";
  "125904123934656" -> "125904123930528";
  "125904123934656" -> "125904123935760";
  "125904123928944" [label="main"];
  "125904123930528" [label="Code"];
  "125904123930528" -> "125904123932592";
  "125904123930528" -> "125904123933936";
  "125904123930528" -> "125904123931440";
  "125904123930528" -> "125904123934464";
  "125904123930528" -> "125904123936240";
  "125904123932592" [label="Declaration"];
  "125904123932592" -> "125904123935280";
  "125904123932592" -> "125904123931920";
  "125904123935280" [label="x"];
  "125904123931920" [label="4"];
  "125904123933936" [label="Declaration"];
  "125904123933936" -> "125904123934800";
  "125904123933936" -> "125904123932256";
  "125904123934800" [label="b"];
  "125904123932256" [label="9632"];
  "125904123931440" [label="Declaration"];
  "125904123931440" -> "125904123930384";
  "125904123931440" -> "125904123929664";
  "125904123930384" [label="x_ptr"];
  "125904123929664" [label="Expr"];
  "125904123929664" -> "125904123935376";
  "125904123929664" -> "125904123936144";
  "125904123935376" [label="&"];
  "125904123936144" [label="b"];
  "125904123934464" [label="Comment"];
  "125904123934464" -> "125904124134112";
  "125904124134112" [label="*x_ptr = x; //Invalid: const assignment"];
  "125904123936240" [label="Assignment"];
  "125904123936240" -> "125904123936384";
  "125904123936240" -> "125904123936528";
  "125904123936384" [label="x_ptr"];
  "125904123936528" [label="Expr"];
  "125904123936528" -> "125904123936624";
  "125904123936528" -> "125904124133632";
  "125904123936624" [label="&"];
  "125904124133632" [label="x"];
  "125904123935760" [label="Return"];
}
